--- a/style.css
+++ b/style.css
@@ -1,74 +1,164 @@
-@import url('https://fonts.googleapis.com/css2?family=wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=wght@500&display=swap");
 * {
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    inline-size: 100%;
-    block-size: 100vh;
-    display: flex;
-    justify-content: center;
+body {
+  inline-size: 100%;
+  block-size: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(45deg, #0a0a0a, #3a4452);
+}
+.main {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 150px;
+  justify-content: space-between;
+  align-items: center;
+  transform: scale(0.89);
+}
+
+.separation {
+  inline-size: 0.438rem;
+  block-size: 47.4em;
+  background-color: rgb(255, 255, 255);
+}
+
+/* MEDIA SECTION **------------------START----------------** */
+
+@media (min-width: 320px) and (max-width: 700px) {
+  .main {
+    transform: scale(0.2);
+    flex-direction: column-reverse;
     align-items: center;
-    background: linear-gradient(45deg,#0a0a0a, #3a4452);
-    
+  }
+  .hero_img {
+    transform: scale(0.7);
+    position: relative;
+    inset-block-end: 100px;
+  }
+  .hero_img img {
+    block-size: 15rem;
+    inline-size: 15rem;
+    transform: scale(0.5);
+  }
+  .separation {
+    block-size: 0.438rem;
+    inline-size: 66em;
+    background-color: rgb(255, 255, 255);
+  }
 }
-.main{
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 50px;
+@media (min-width: 710px) and (max-width: 1000px) {
+  .main {
+    transform: scale(0.56);
+  }
+  .calculator {
+    transform: scale(0.9);
+    position: relative;
+    inset-inline-start: 45px;
+  }
+  .hero_img {
+    position: relative;
+    inset-inline-end: 40px;
+    transform: scale(1.1);
+  }
+  .separation {
+    inline-size: 0.438rem;
+    block-size: 55.5em;
+  }
 }
-@media (min-width : 320px ) and (max-width : 768px){
-    .main{
-        transform: scale(0.9);
-        flex-direction: column-reverse;
-    }
-    .img a>img{
-        transform: scale(0.1);
-    }
+@media (min-width: 1100px) and (max-width: 1400px) {
+  .main {
+    transform: scale(0.5);
+  }
+  .calculator {
+    transform: scale(0.7);
+    position: relative;
+    inset-inline-start: 30px;
+  }
+  .hero_img {
+    position: relative;
+    inset-inline-end: 40px;
+    transform: scale(0.5);
+  }
+  .separation {
+    inline-size: 0.438rem;
+    block-size: 55.5em;
+  }
 }
 
+/* MEDIA SECTION **--------------------END--------------------** */
+
+.hero_img img {
+  block-size: 35rem;
+  inline-size: 35rem;
+  transform: scale(1.1);
+  align-self: top;
+}
+.hero_img a {
+  text-decoration: none;
+  font-size: 50px;
+  outline: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #ffffff;
+}
+.hero_img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
 .calculator {
-    border: 1px solid #717377;
-    padding: 20px;
-    border-radius: 16px;
-    background: transparent;
-    box-shadow: 0px 3px 15px rgba(113,115,119,0.5);
-    
+  border: 1px solid #fb7c14;
+  padding: 20px;
+  border-radius: 16px;
+  background: transparent;
+  box-shadow: 1px 1px 80px rgba(113, 115, 119, 0.5);
+  transform: scale(1.3);
 }
-input{
-    inline-size: 320px;
-    border: 1px solid rgb(80, 75, 75);
-    border-radius: 10px;
-    padding: 24px;
-    margin: 10px;
-    background: transparent;
-    box-shadow: 0px 3px 15px rgba(84,84,84,0.1);
-    font-size: 40px;
-    text-align: end;
-    cursor: pointer;
-    color: #ffffff;
+input {
+  inline-size: 320px;
+  border: 1px solid rgb(80, 75, 75);
+  border-radius: 10px;
+  padding: 24px;
+  margin: 10px;
+  background: transparent;
+  box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1);
+  font-size: 40px;
+  text-align: end;
+  cursor: pointer;
+  color: #ffffff;
+  outline: solid 1px #fdfcfcb8;
 }
-input::placeholder{
-    color: #ffff;
+input::placeholder {
+  color: #ffff;
 }
-button{
-    border: none;
-    inline-size: 60px;
-    block-size: 60px;
-    margin: 10px;
-    border-radius: 50%;
-    background: transparent;
-    color: #ffff;
-    font-size: 20px;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1);
-    cursor: pointer;
+button {
+  border: none;
+  inline-size: 60px;
+  block-size: 60px;
+  margin: 10px;
+  border-radius: 50%;
+  background: transparent;
+  color: #ffff;
+  font-size: 20px;
+  box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+  outline: solid black 1px;
 }
-.equalBtn{
-    background-color: #fb7c14;
+.equalBtn {
+  background-color: #fb7c14;
 }
-.operator{
-    color: green;
+.operator {
+  color: green;
+}
+
+.red_operator_button {
+  color: red;
 }
